[tool.poetry]
name = "smart-sticker-mcp"
version = "0.1.0"
description = "AI-powered Smart Sticker MCP Server"
authors = ["Madiha <akmadiha0207@gmail.com>"]

[tool.poetry.dependencies]
# Pin to Python 3.11 to avoid Pillow build issues on Render
python = "3.11.*"
fastapi = "0.110.0"
uvicorn = "0.34.0"  # Keep in sync with FastAPI compatibility
google-generativeai = "0.4.1"
pillow = "10.2.0"  # For basic image operations (cropping, resizing, etc.)
requests = "*"
pydantic = "2.11.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
